--- a/BeerAdvisor/app/src/main/res/layout/activity_main.xml
+++ b/BeerAdvisor/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".FindBeerActivity">
     <Spinner
         android:id="@+id/color"
         android:layout_width="wrap_content"
