--- a/BeerAdvisor/app/src/main/res/layout/activity_main.xml
+++ b/BeerAdvisor/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_gravity="center"
-        android:text="Button"
+        android:text="@string/button"
         android:onClick="onClickFindBeer"/>
 
 
