--- a/Portfolio/app/src/main/res/layout/splash_screen.xml
+++ b/Portfolio/app/src/main/res/layout/splash_screen.xml
@@ -5,15 +5,29 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen">
+    android:background="@color/colorPrimary"
+    tools:context=".Common.SplashScreen">
+
+    <ImageView
+        android:id="@+id/background_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/splash_screen_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="66dp" />
 
     <TextView
+        android:id="@+id/powered_by_line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginStart="110dp"
+        android:layout_marginEnd="111dp"
+        android:text="@string/power_by"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+
+        app:layout_constraintEnd_toEndOf="@+id/background_image"
+        app:layout_constraintStart_toStartOf="@+id/background_image" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
