--- a/Portfolio/app/src/main/res/values/colors.xml
+++ b/Portfolio/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#202C59</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <color name="lightWhite">#f5f5f5</color>
+    <color name="white">#fff</color>
+    <color name="black">#03DAC5</color>
+
 </resources>
