--- a/Ui First/app/src/main/res/layout/activity_main.xml
+++ b/Ui First/app/src/main/res/layout/activity_main.xml
@@ -19,60 +19,63 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:background="@color/blue"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="76dp"
-                        android:layout_height="76dp"
-                        app:srcCompat="@drawable/profile" />
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Welcome back"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="76dp"
-                        tools:layout_editor_absoluteY="19dp" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="203dp"
-                        android:layout_height="30dp"
-                        android:text="Nahom Sileshi"
-                        android:textColor="@color/white"
-                        android:textSize="27sp"
-
-                        tools:layout_editor_absoluteX="76dp"
-                        tools:layout_editor_absoluteY="38dp" />
-
-                    <ImageView
                         android:id="@+id/imageView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/bell"
-                        tools:layout_editor_absoluteX="394dp"
-                        tools:layout_editor_absoluteY="19dp" />
+                        tools:layout_editor_absoluteX="362dp" />
 
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Welcome back"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
+                        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="Nahom"
+                        android:textColor="@color/white"
+                        android:textSize="27sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
+                        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="78dp"
+                        android:layout_height="66dp"
+                        app:srcCompat="@drawable/profile" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Discover the Best Place\nTo Travel"
                     android:textSize="28sp"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    />
+
+                    android:text="Discover the Best Place\n To Travel" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -89,22 +92,18 @@
                         android:text="Name" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="44dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-                        android:layout_marginStart="16dp"
-                        android:background="@drawable/settings_background">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
 
                         <ImageView
-                            android:id="@+id/imageView9"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
-                            app:srcCompat="@drawable/settings"
-                            tools:layout_editor_absoluteX="5dp"
-                            tools:layout_editor_absoluteY="2dp" />
+                            android:id="@+id/imageView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/settings" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
                 </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
