--- a/Ui First/app/src/main/res/layout/activity_main.xml
+++ b/Ui First/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent">
 
     <ScrollView
-        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -195,7 +194,6 @@
     </ScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        app.layout_constraintBottom_toBottomOf="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -268,8 +266,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Home"
-                        android:textAlignment="center"
-
+                        android:textAlignment="center" />
 
                 </LinearLayout>
 
@@ -311,7 +308,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:src="@drawable/float_icon"
             app:backgroundTint="@color/orange"
             app:layout_anchor="@id/app_bar"
