--- a/Ui First/app/src/main/res/layout/viewholder_categoriy.xml
+++ b/Ui First/app/src/main/res/layout/viewholder_categoriy.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/CatImg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -28,10 +29,10 @@
         android:id="@+id/Catimg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:text="Cat"
-        android:textColor="@color/black"
         android:textAlignment="center"
-        android:layout_marginTop="4dp"/>
+        android:textColor="@color/black" />
 
 
 </LinearLayout>
